# trident

./: .gitattributes  .gitignore  Cargo.toml  LICENSE  README.md  install.ps1  install.sh
.github/workflows/: release.yml
docs/: README.md  index.html
src/: cli.rs  config.rs  hub.rs  main.rs  mcp.rs
