[package]
name = "trident"
version = "0.1.9"
edition = "2021"
description = "Bridge sibling Claude Code sessions across machines - one session hands a task into another."
license = "MIT"

[[bin]]
name = "trident"
path = "src/main.rs"

[dependencies]
tokio = { version = "1", features = ["rt-multi-thread", "macros", "io-std", "io-util", "net", "process", "time", "sync"] }
axum = "0.7"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.12", default-features = false, features = ["stream", "json"] }
clap = { version = "4", features = ["derive"] }
anyhow = "1"
toml = "0.8"
inquire = "0.7"
futures = "0.3"
async-stream = "0.3"

[profile.release]
strip = true
lto = true
opt-level = "z"
codegen-units = 1
panic = "abort"
